// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests qaStack should match dev snapshot 1`] = `
Object {
  "Outputs": Object {
    "devdcextensiongadashboardampamplifyAmplifyAppIdF2F99189": Object {
      "Export": Object {
        "Name": "dev-dc-extension-ga-dashboard-amp-amplify-AmplifyAppId",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "devdcextensiongadashboardampamplifyD20367BF",
          "AppId",
        ],
      },
    },
    "devdcextensiongadashboardampamplifyCertificateRecordDD187031": Object {
      "Export": Object {
        "Name": "dev-dc-extension-ga-dashboard-amp-amplify-CertificateRecord",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "devdcextensiongadashboardampamplifydevdcextensiongadashboarddevadisws3B62BBBF",
          "CertificateRecord",
        ],
      },
    },
    "devdcextensiongadashboardampamplifyDomainName5A94C755": Object {
      "Export": Object {
        "Name": "dev-dc-extension-ga-dashboard-amp-amplify-DomainName",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "devdcextensiongadashboardampamplifydevdcextensiongadashboarddevadisws3B62BBBF",
          "DomainName",
        ],
      },
    },
  },
  "Resources": Object {
    "devdcextensiongadashboardampamplifyD20367BF": Object {
      "Properties": Object {
        "IAMServiceRole": Object {
          "Fn::GetAtt": Array [
            "devdcextensiongadashboardampamplifyRole01830EFA",
            "Arn",
          ],
        },
        "Name": "dev-dc-extension-ga-dashboard-amp-amplify",
        "OauthToken": "{{resolve:secretsmanager:qa-tupperware-github-pat:SecretString:::}}",
        "Repository": "https://github.com/amplience/dc-extension-ga-dashboard",
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "dev",
          },
        ],
      },
      "Type": "AWS::Amplify::App",
    },
    "devdcextensiongadashboardampamplifyRole01830EFA": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "amplify.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "dev",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "devdcextensiongadashboardampamplifydevdcextensiongadashboarddevadisws3B62BBBF": Object {
      "Properties": Object {
        "AppId": Object {
          "Fn::GetAtt": Array [
            "devdcextensiongadashboardampamplifyD20367BF",
            "AppId",
          ],
        },
        "DomainName": "dev-dc-extension-ga-dashboard.dev.adis.ws",
        "SubDomainSettings": Array [
          Object {
            "BranchName": Object {
              "Fn::GetAtt": Array [
                "devdcextensiongadashboardampamplifymaster669128F6",
                "BranchName",
              ],
            },
            "Prefix": "",
          },
        ],
      },
      "Type": "AWS::Amplify::Domain",
    },
    "devdcextensiongadashboardampamplifymaster669128F6": Object {
      "Properties": Object {
        "AppId": Object {
          "Fn::GetAtt": Array [
            "devdcextensiongadashboardampamplifyD20367BF",
            "AppId",
          ],
        },
        "BranchName": "master",
        "EnableAutoBuild": true,
        "EnablePullRequestPreview": true,
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "dev",
          },
        ],
      },
      "Type": "AWS::Amplify::Branch",
    },
  },
}
`;

exports[`snapshot tests qaStack should match prod snapshot 1`] = `
Object {
  "Outputs": Object {
    "proddcextensiongadashboardampamplifyAmplifyAppIdF55EC2E0": Object {
      "Export": Object {
        "Name": "prod-dc-extension-ga-dashboard-amp-amplify-AmplifyAppId",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "proddcextensiongadashboardampamplify5AFE810A",
          "AppId",
        ],
      },
    },
    "proddcextensiongadashboardampamplifyCertificateRecordE757EAAA": Object {
      "Export": Object {
        "Name": "prod-dc-extension-ga-dashboard-amp-amplify-CertificateRecord",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "proddcextensiongadashboardampamplifydcextensiongadashboardampliencenet177C1CD6",
          "CertificateRecord",
        ],
      },
    },
    "proddcextensiongadashboardampamplifyDomainName47777F9B": Object {
      "Export": Object {
        "Name": "prod-dc-extension-ga-dashboard-amp-amplify-DomainName",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "proddcextensiongadashboardampamplifydcextensiongadashboardampliencenet177C1CD6",
          "DomainName",
        ],
      },
    },
  },
  "Resources": Object {
    "proddcextensiongadashboardampamplify5AFE810A": Object {
      "Properties": Object {
        "IAMServiceRole": Object {
          "Fn::GetAtt": Array [
            "proddcextensiongadashboardampamplifyRoleE0693ECE",
            "Arn",
          ],
        },
        "Name": "prod-dc-extension-ga-dashboard-amp-amplify",
        "OauthToken": "{{resolve:secretsmanager:qa-tupperware-github-pat:SecretString:::}}",
        "Repository": "https://github.com/amplience/dc-extension-ga-dashboard",
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::Amplify::App",
    },
    "proddcextensiongadashboardampamplifyRoleE0693ECE": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "amplify.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "proddcextensiongadashboardampamplifydcextensiongadashboardampliencenet177C1CD6": Object {
      "Properties": Object {
        "AppId": Object {
          "Fn::GetAtt": Array [
            "proddcextensiongadashboardampamplify5AFE810A",
            "AppId",
          ],
        },
        "DomainName": "dc-extension-ga-dashboard.amplience.net",
        "SubDomainSettings": Array [
          Object {
            "BranchName": Object {
              "Fn::GetAtt": Array [
                "proddcextensiongadashboardampamplifyproduction11819A19",
                "BranchName",
              ],
            },
            "Prefix": "",
          },
        ],
      },
      "Type": "AWS::Amplify::Domain",
    },
    "proddcextensiongadashboardampamplifyproduction11819A19": Object {
      "Properties": Object {
        "AppId": Object {
          "Fn::GetAtt": Array [
            "proddcextensiongadashboardampamplify5AFE810A",
            "AppId",
          ],
        },
        "BranchName": "production",
        "EnableAutoBuild": true,
        "EnablePullRequestPreview": true,
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "prod",
          },
        ],
      },
      "Type": "AWS::Amplify::Branch",
    },
  },
}
`;

exports[`snapshot tests qaStack should match qa snapshot 1`] = `
Object {
  "Outputs": Object {
    "qadcextensiongadashboardampamplifyAmplifyAppIdF183F3A3": Object {
      "Export": Object {
        "Name": "qa-dc-extension-ga-dashboard-amp-amplify-AmplifyAppId",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "qadcextensiongadashboardampamplifyA5EF52A7",
          "AppId",
        ],
      },
    },
    "qadcextensiongadashboardampamplifyCertificateRecord06FCA6D5": Object {
      "Export": Object {
        "Name": "qa-dc-extension-ga-dashboard-amp-amplify-CertificateRecord",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "qadcextensiongadashboardampamplifyqadcextensiongadashboarddevadiswsC9D483E6",
          "CertificateRecord",
        ],
      },
    },
    "qadcextensiongadashboardampamplifyDomainNameADED8974": Object {
      "Export": Object {
        "Name": "qa-dc-extension-ga-dashboard-amp-amplify-DomainName",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "qadcextensiongadashboardampamplifyqadcextensiongadashboarddevadiswsC9D483E6",
          "DomainName",
        ],
      },
    },
  },
  "Resources": Object {
    "qadcextensiongadashboardampamplifyA5EF52A7": Object {
      "Properties": Object {
        "IAMServiceRole": Object {
          "Fn::GetAtt": Array [
            "qadcextensiongadashboardampamplifyRoleCD97F8FB",
            "Arn",
          ],
        },
        "Name": "qa-dc-extension-ga-dashboard-amp-amplify",
        "OauthToken": "{{resolve:secretsmanager:qa-tupperware-github-pat:SecretString:::}}",
        "Repository": "https://github.com/amplience/dc-extension-ga-dashboard",
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "qa",
          },
        ],
      },
      "Type": "AWS::Amplify::App",
    },
    "qadcextensiongadashboardampamplifyRoleCD97F8FB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "amplify.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "qa",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "qadcextensiongadashboardampamplifymaster464DA772": Object {
      "Properties": Object {
        "AppId": Object {
          "Fn::GetAtt": Array [
            "qadcextensiongadashboardampamplifyA5EF52A7",
            "AppId",
          ],
        },
        "BranchName": "master",
        "EnableAutoBuild": true,
        "EnablePullRequestPreview": true,
        "Tags": Array [
          Object {
            "Key": "amp:application",
            "Value": "dc-extension-ga-dashboard",
          },
          Object {
            "Key": "amp:application-function",
            "Value": "frontend",
          },
          Object {
            "Key": "amp:confidentiality",
            "Value": "public",
          },
          Object {
            "Key": "amp:owner",
            "Value": "tupperware",
          },
          Object {
            "Key": "amp:product",
            "Value": "dc",
          },
          Object {
            "Key": "amp:zone",
            "Value": "public",
          },
          Object {
            "Key": "env",
            "Value": "qa",
          },
        ],
      },
      "Type": "AWS::Amplify::Branch",
    },
    "qadcextensiongadashboardampamplifyqadcextensiongadashboarddevadiswsC9D483E6": Object {
      "Properties": Object {
        "AppId": Object {
          "Fn::GetAtt": Array [
            "qadcextensiongadashboardampamplifyA5EF52A7",
            "AppId",
          ],
        },
        "DomainName": "qa-dc-extension-ga-dashboard.dev.adis.ws",
        "SubDomainSettings": Array [
          Object {
            "BranchName": Object {
              "Fn::GetAtt": Array [
                "qadcextensiongadashboardampamplifymaster464DA772",
                "BranchName",
              ],
            },
            "Prefix": "",
          },
        ],
      },
      "Type": "AWS::Amplify::Domain",
    },
  },
}
`;
